--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,3 +36,6 @@ jobs:
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
+          # Set provenance to false due to issue documented here: https://github.com/docker/build-push-action/issues/778
+          provenance: false
+          platforms: linux/amd64,linux/arm64
