--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up and use Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Build container image and push
         uses: docker/build-push-action@v5
         with:
