--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,11 +15,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Docker meta
-        uses: zazuko/action-docker-meta@main
-        id: docker_meta
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: latest
+
+      - name: Get release version
+        id: version
+        run: echo "VALUE=$(npx --yes semver ${{ github.event.release.tag_name }})" >> "$GITHUB_OUTPUT"
+
+      - name: Docker metadata
+        id: metadata
+        uses: docker/metadata-action@v4
         with:
           images: ${{ env.IMAGE_NAME }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -40,8 +53,8 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
+          tags: ${{ steps.metadata.outputs.tags }}
+          labels: ${{ steps.metadata.outputs.labels }}
           # Set provenance to false due to issue documented here: https://github.com/docker/build-push-action/issues/778
           provenance: false
           platforms: linux/amd64,linux/arm64
