simplify example compose file
add in python based test and remove conjecto image for
adding a test patch to the example services

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,19 +3,19 @@
 version: "3"
 
 tasks:
-  down:
-    cmd: docker compose --profile stack down
-
-  down:clean:
-    desc: Tear down stack and also remove named volumes
-    cmd: docker compose --profile stack down -v
-
-  build:
-    cmd: docker compose --profile stack --profile loader build
+  default:
+    desc: list all tasks
+    cmd: task -a
 
   up:
-    cmd: docker compose --profile stack up -d
+    desc: start delta server and 2 fuseki servers as docker compose services
+    cmd: docker compose up -d
 
   load:
-    desc: Load data.ttl as a patch update
-    cmd: docker compose run --rm loader
+    desc: Load data.trig as a patch update
+    cmd: uv run load_patch.py
+
+  down:
+    desc: down the docker services
+    cmd: docker compose down
+
